Changes in 1.2.16:
  o Client Changes:
    * The rollback API now raises a RollbackError instead of returning
      non-zero on errors. (CNY-1643)

  o Build Changes:
    * When file conflicts occur while cooking groups, the deps that
      caused a package to be pulled in are listed. (CNY-2308)
    * Config policy will automatically append a newline to non-binary files.
      Files that are marked as Config and appear to be binary will
      continue to trigger an error as they have previously. (CNY-2422)
    * Perl requirements that are not present on the system or provided by
      the package being built are dropped. (CNY-2180)
    * Two expansion functions have been introduced to package recipes:
      r.glob and r.regexp. These functions return an object that can be
      substituted for any API parameter that calls for a string based
      regexp or glob. (CNY-2222)
    * Group recipe actions like "r.addAll" and "r.addCopy" now record
      the version of the group that is being copied from into the newly
      created group. (CNY-2359)
    * Add code to display new-style metadata through rq, q, and showchangeset,
      as well as propagate that metadata via cooking, promoting, shadowing,
      and committing source packages.  Entering this metadata must still 
      be done through scripts.  (CNY-1808)
    * Added a hook that allows build requirements to be overridden by
      rMake. (CNY-2427)
    * Build actions that don't match anything (r.Move, r.Copy etc) will
      now log exactly what they were trying to do. (CNY-2216)

  o Bug Fixes:
    * Conary no longer tracebacks when building a package that contains 
      a pkgconfig reference to a file in the current package that is in a
      symlinked directory. (CNY-2455)
    * The order in which configuration files are read when a glob was
      passed to includeConfigFile is now deterministic. (CNY-2483)

Changes in 1.2.15:
  o Bug Fixes: